--- a/gb/22/3/28/n13678637.md
+++ b/gb/22/3/28/n13678637.md
@@ -141,7 +141,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/28/n10094168.md#1" target="_blank">如初：再回顾民国学人批苏俄</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/1/n10946163.md#1" target="_blank">新加坡法轮功学员修炼故事 真善忍改变人心</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/25/n10247979.md#1" target="_blank">中共淫乱的前生今世（6）淫乱大看台</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/6/n10834201.md#1" target="_blank">这些原中共基层官员对李洪志大师的感恩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
